Final Release(borderless)

--- a/Alomero Housing Software/UI/Form1.resx
+++ b/Alomero Housing Software/UI/Form1.resx
@@ -117,4 +117,100 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAIAEBAAAAEAIABoBAAAJgAAACAgAAABACAAqBAAAI4EAAAoAAAAEAAAACAAAAABACAAAAAAADAE
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP+/AED/vwCA/78AgP+/AID/vwCA/78AgP+/
+        AID/vwCA/78AgP+/AID/vwCA/78AQAAAAAAAAAAAAAAAAAAAAAD/vwCA/78AwP+/AID/vwD//78AgP+/
+        AMD/vwDA/78AgP+/AP//vwCA/78AwP+/AIAAAAAAAAAAAAAAAAAAAAAA/78AgP+/AIAAAAAA/78A/wAA
+        AAD/vwCA/78AgAAAAAD/vwD/AAAAAP+/AID/vwCAAAAAAAAAAAAAAAAAAAAAAP+/AID/vwD//78A//+/
+        AP//vwD//78A//+/AP//vwD//78A//+/AP//vwD//78AgAAAAAAAAAAAAAAAAAAAAAD/vwCA/78AgAAA
+        AAD/vwD/AAAAAP+/AID/vwCAAAAAAP+/AP8AAAAA/78AgP+/AIAAAAAAAAAAAAAAAAAAAAAA/78AgP+/
+        AOD/vwDA/78A//+/AMD/vwDg/78A4P+/AMD/vwD//78AwP+/AOD/vwCAAAAAAAAAAAAAAAAAAAAAAP+/
+        AID/vwDg/78AwP+/AP//vwDA/78A4P+/AOD/vwDA/78A//+/AMD/vwDg/78AgAAAAAAAAAAAAAAAAAAA
+        AAD/vwCA/78AgAAAAAD/vwD/AAAAAP+/AID/vwCAAAAAAP+/AP8AAAAA/78AgP+/AIAAAAAAAAAAAAAA
+        AAAAAAAA/78AgP+/AP//vwD//78A//+/AP//vwD//78A//+/AP//vwD//78A//+/AP//vwCAAAAAAAAA
+        AAAAAAAAAAAAAP+/AID/vwCAAAAAAP+/AP8AAAAA/78AgP+/AIAAAAAA/78A/wAAAAD/vwCA/78AgAAA
+        AAAAAAAAAAAAAAAAAAD/vwCA/78AwP+/AID/vwD//78AgP+/AMD/vwDA/78AgP+/AP//vwCA/78AwP+/
+        AIAAAAAAAAAAAAAAAAAAAAAA/78AQP+/AID/vwCA/78AgP+/AID/vwCA/78AgP+/AID/vwCA/78AgP+/
+        AID/vwBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//AAD//wAA4AcAAMADAADKUwAAwAMAAMpTAADAAwAAwAMAAMpT
+        AADAAwAAylMAAMADAADgBwAA//8AAP//AAAoAAAAIAAAAEAAAAABACAAAAAAAIAQAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA/78A//+/AP//vwD//78A//+/AP//vwD//78A//+/AP//vwD//78A//+/AP//vwD//78A//+/
+        AP//vwD//78A//+/AP//vwD//78A//+/AP//vwD//78A/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAD/vwD//78A//+/AP//vwD//78A//+/AP//vwD//78A//+/AP//vwD//78A//+/
+        AP//vwD//78A//+/AP//vwD//78A//+/AP//vwD//78A//+/AP//vwD/AAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP+/AP//vwD/AAAAAAAAAAAAAAAA/78A//+/AP8AAAAAAAAAAAAA
+        AAD/vwD//78A/wAAAAAAAAAAAAAAAP+/AP//vwD/AAAAAAAAAAAAAAAA/78A//+/AP8AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/78A//+/AP8AAAAAAAAAAAAAAAD/vwD//78A/wAA
+        AAAAAAAAAAAAAP+/AP//vwD/AAAAAAAAAAAAAAAA/78A//+/AP8AAAAAAAAAAAAAAAD/vwD//78A/wAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/vwD//78A/wAAAAAAAAAAAAAAAP+/
+        AP//vwD/AAAAAAAAAAAAAAAA/78A//+/AP8AAAAAAAAAAAAAAAD/vwD//78A/wAAAAAAAAAAAAAAAP+/
+        AP//vwD/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP+/AP//vwD//78A//+/
+        AP//vwD//78A//+/AP//vwD//78A//+/AP//vwD//78A//+/AP//vwD//78A//+/AP//vwD//78A//+/
+        AP//vwD//78A//+/AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/78A//+/
+        AP//vwD//78A//+/AP//vwD//78A//+/AP//vwD//78A//+/AP//vwD//78A//+/AP//vwD//78A//+/
+        AP//vwD//78A//+/AP//vwD//78A/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAD/vwD//78A/wAAAAAAAAAAAAAAAP+/AP//vwD/AAAAAAAAAAAAAAAA/78A//+/AP8AAAAAAAAAAAAA
+        AAD/vwD//78A/wAAAAAAAAAAAAAAAP+/AP//vwD/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAP+/AP//vwD/AAAAAAAAAAAAAAAA/78A//+/AP8AAAAAAAAAAAAAAAD/vwD//78A/wAA
+        AAAAAAAAAAAAAP+/AP//vwD/AAAAAAAAAAAAAAAA/78A//+/AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA/78A//+/AP8AAAAAAAAAAAAAAAD/vwD//78A/wAAAAAAAAAAAAAAAP+/
+        AP//vwD/AAAAAAAAAAAAAAAA/78A//+/AP8AAAAAAAAAAAAAAAD/vwD//78A/wAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/vwD//78A//+/AP//vwD//78A//+/AP//vwD//78A//+/
+        AP//vwD//78A//+/AP//vwD//78A//+/AP//vwD//78A//+/AP//vwD//78A//+/AP//vwD/AAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP+/AP//vwD//78A//+/AP//vwD//78A//+/
+        AP//vwD//78A//+/AP//vwD//78A//+/AP//vwD//78A//+/AP//vwD//78A//+/AP//vwD//78A//+/
+        AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/78A//+/AP8AAAAAAAAAAAAA
+        AAD/vwD//78A/wAAAAAAAAAAAAAAAP+/AP//vwD/AAAAAAAAAAAAAAAA/78A//+/AP8AAAAAAAAAAAAA
+        AAD/vwD//78A/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/vwD//78A/wAA
+        AAAAAAAAAAAAAP+/AP//vwD/AAAAAAAAAAAAAAAA/78A//+/AP8AAAAAAAAAAAAAAAD/vwD//78A/wAA
+        AAAAAAAAAAAAAP+/AP//vwD/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP+/
+        AP//vwD/AAAAAAAAAAAAAAAA/78A//+/AP8AAAAAAAAAAAAAAAD/vwD//78A/wAAAAAAAAAAAAAAAP+/
+        AP//vwD/AAAAAAAAAAAAAAAA/78A//+/AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA/78A//+/AP//vwD//78A//+/AP//vwD//78A//+/AP//vwD//78A//+/AP//vwD//78A//+/
+        AP//vwD//78A//+/AP//vwD//78A//+/AP//vwD//78A/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAD/vwD//78A//+/AP//vwD//78A//+/AP//vwD//78A//+/AP//vwD//78A//+/
+        AP//vwD//78A//+/AP//vwD//78A//+/AP//vwD//78A//+/AP//vwD/AAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP+/AP//vwD/AAAAAAAAAAAAAAAA/78A//+/AP8AAAAAAAAAAAAA
+        AAD/vwD//78A/wAAAAAAAAAAAAAAAP+/AP//vwD/AAAAAAAAAAAAAAAA/78A//+/AP8AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/78A//+/AP8AAAAAAAAAAAAAAAD/vwD//78A/wAA
+        AAAAAAAAAAAAAP+/AP//vwD/AAAAAAAAAAAAAAAA/78A//+/AP8AAAAAAAAAAAAAAAD/vwD//78A/wAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/vwD//78A/wAAAAAAAAAAAAAAAP+/
+        AP//vwD/AAAAAAAAAAAAAAAA/78A//+/AP8AAAAAAAAAAAAAAAD/vwD//78A/wAAAAAAAAAAAAAAAP+/
+        AP//vwD/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP+/AP//vwD//78A//+/
+        AP//vwD//78A//+/AP//vwD//78A//+/AP//vwD//78A//+/AP//vwD//78A//+/AP//vwD//78A//+/
+        AP//vwD//78A//+/AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/78A//+/
+        AP//vwD//78A//+/AP//vwD//78A//+/AP//vwD//78A//+/AP//vwD//78A//+/AP//vwD//78A//+/
+        AP//vwD//78A//+/AP//vwD//78A/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//////////////////////////+AAAH/gAAB/5znOf+c5zn/nO
+        c5/4AAAf+AAAH/nOc5/5znOf+c5zn/gAAB/4AAAf+c5zn/nOc5/5znOf+AAAH/gAAB/5znOf+c5zn/nO
+        c5/4AAAf+AAAH///////////////////////////
+</value>
+  </data>
 </root>
